fix video player on mobile

--- a/main.css
+++ b/main.css
@@ -71,6 +71,7 @@ body {
   section iframe {
       width: 50%;
       height: 50%;
+      max-width: 100%;
   }
   
   .contents {
